--- a/shawn_baugh_2/full_mean_wall/client/partials/index.html
+++ b/shawn_baugh_2/full_mean_wall/client/partials/index.html
@@ -2,10 +2,10 @@
 <div>
     <p ng-repeat='error in UC.registration_errors'>{{ error }}</p>
     <form ng-submit='UC.create(UC.newUser)' method="post">
-        First Name:
-        <input type="text" ng-model='UC.newUser.first_name'>
-        Last Name:
-        <input type="text" ng-model='UC.newUser.last_name'>
+        Full Name:
+        <input type="text" ng-model='UC.newUser.fullname'>
+        Username:
+        <input type="text" ng-model='UC.newUser.username'>
         Email:
         <input type="text" ng-model='UC.newUser.email'>
         Password:
@@ -17,9 +17,9 @@
 <h2>Login</h2>
 <p ng-repeat='error in UC.login_errors'>{{error}}</p>
 <form ng-submit='UC.login(UC.loginUser)' method="post">
-    Email:
-    <input type="text" ng-model='UC.loginUser.email'>
+    Username:
+    <input type="text" ng-model="UC.loginUser.username">
     Password:
-    <input type="text" ng-model='UC.loginUser.password'>
+    <input type="text" ng-model="UC.loginUser.password">
     <input type="submit" value="Submit">
 </form>
